--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
   <main class="main-body container">
     <h1 class="visually-hidden">Фотобудки для вашего праздника</h1>
     <section class="main-body__video-block video-block">
+      <h2 class="main-body__video-title visually-hidden">Блок с видео</h2>
       <div class="video-block__wrapper">
         <a class="video-block__inner-block" href="#video-modal">
-          <div class="video-block__button" aria-label="Start video"></div>
+          <div class="video-block__button"></div>
         </a>
       </div>
     </section>
@@ -52,10 +53,10 @@
       <div class="photo-booth__filter-wrapper">
         <p class="photo-booth__filter-text">Сортировка: </p>
         <p class="photo-booth__select-default-value">По умолчанию</p>
-        <ul class="photo-booth__filter-select">
-          <li class="photo-booth__filter-item" value="priceup">По возрастанию</li>
-          <li class="photo-booth__filter-item" value="pricedown">По убыванию</li>
-        </ul>
+        <ol class="photo-booth__filter-select">
+          <li class="photo-booth__filter-item" value="1">По возрастанию</li>
+          <li class="photo-booth__filter-item" value="2">По убыванию</li>
+        </ol>
         <span class="photo-booth__filter-arrow"></span>
       </div>
       <ul class="photo-booth__list">
@@ -121,7 +122,7 @@
             </svg>
           </span>
           <h3 class="main-footer__item-title">Телефон</h3>
-          <a class="main-footer__item-text" href="tel:+7 495 123 45 67">+7 495 123 45 67</a>
+          <a class="main-footer__item-text" href="tel:+74951234567">+7 495 123 45 67</a>
         </li>
         <li class="main-footer__item">
           <span class="main-footer__item-icon">
@@ -140,23 +141,24 @@
             </svg>
           </span>
           <h3 class="main-footer__item-title">Почта</h3>
-          <a class="main-footer__item-text main-footer__item-text--underline" href="mailto: Info@test.ru">Info@test.ru</a>
+          <a class="main-footer__item-text main-footer__item-text--underline" href="mailto:Info@test.ru">Info@test.ru</a>
         </li>
       </ul>
     </div>
     <div class="main-footer__map">
-      <iframe loading="lazy" title="yandex map" width="360" height="360" frameborder="0">
+      <iframe loading="lazy" title="yandex map" width="360" height="360">
       </iframe>
     </div>
   </footer>
 </div>
-<section id="video-modal" class="video-modal" aria-modal="true">
+<section id="video-modal" class="video-modal" aria-modal="true" role="dialog">
+  <h2 class="video-modal__title visually-hidden">Модальное окно с видео</h2>
   <div class="video-modal__dialog">
     <div class="video-modal__content">
       <a href="#close" title="Close" class="video-modal__close-button">×</a>
       <div class="video-modal__body">
         <div class="video-modal__video-placeholder video-placeholder" data-video="https://youtu.be/dQw4w9WgXcQ">
-          <img class="video-placeholder__image" src="" alt="video placeholder" width="315" height="188">
+          <img class="video-placeholder__image" src="#" alt="video placeholder" width="315" height="188">
           <button class="video-placeholder__button btn-reset" aria-label="youtube button placeholder">
             <svg width="68" height="48" viewBox="0 0 68 48">
               <path class="video-play-shape" d="M66.52,7.74c-0.78-2.93-2.49-5.41-5.42-6.19C55.79,.13,34,0,34,0S12.21,.13,6.9,1.55 C3.97,2.33,2.27,4.81,1.48,7.74C0.06,13.05,0,24,0,24s0.06,10.95,1.48,16.26c0.78,2.93,2.49,5.41,5.42,6.19 C12.21,47.87,34,48,34,48s21.79-0.13,27.1-1.55c2.93-0.78,4.64-3.26,5.42-6.19C67.94,34.95,68,24,68,24S67.94,13.05,66.52,7.74z">
@@ -169,12 +171,12 @@
     </div>
   </div>
 </section>
-<section id="gallery-modal" class="gallery-modal" aria-modal="true">
+<section id="gallery-modal" class="gallery-modal" aria-modal="true" role="dialog">
   <div class="gallery-modal__dialog">
     <div class="gallery-modal__content">
       <a href="#close" title="Close" class="gallery-modal__close-button">×</a>
-      <div class="slider__prev swiper-button-prev gallery-modal__prev"></div>
-      <div class="slider__next swiper-button-next gallery-modal__next"></div>
+      <div class="gallery-modal__prev swiper-button-prev"></div>
+      <div class="gallery-modal__next swiper-button-next"></div>
       <div class="gallery-modal__body">
         <div class="gallery-modal__slider slider swiper-container">
           <ul class="slider__wrapper swiper-wrapper">
@@ -204,7 +206,7 @@
     </div>
   </div>
 </section>
-<section id="order-modal" class="order-modal" aria-modal="true">
+<section id="order-modal" class="order-modal" aria-modal="true" role="dialog">
   <div class="order-modal__dialog">
     <div class="order-modal__content">
       <a href="#close" title="Close" class="order-modal__close-button">×</a>
